--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+annotated-types==0.7.0
+bcrypt==4.3.0
+dnspython==2.8.0
+email-validator==2.3.0
+idna==3.10
+passlib==1.7.4
 psycopg2-binary==2.9.10
+pydantic==2.11.9
+pydantic_core==2.33.2
 python-dotenv==1.1.1
 SQLAlchemy==2.0.43
+typing-inspection==0.4.1
 typing_extensions==4.15.0
